2004-07-15  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/15324
	* gfortran.dg/pr15324.f90: New test.

	PR fortran/15129
	* gfortran.dg/pr15129.f90: New test.

	PR fortran/15140
	* gfortran.dg/pr15140.f90: New test.

	PR fortran/13792
	* gfortran.fortran-torture/execute/bounds.f90: Add check for
	compile-time simplification.

2004-07-14  Mike Stump  <mrs@apple.com>

	* gcc.dg/20020426-2.c: Improve type safety wrt unsignedness.

2004-07-14  James E Wilson  <wilson@specifixinc.com>

	PR target/16325
	* gcc.dg/profile-generate-1.c: New.

2004-07-15  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/20040709-1.c: New test.
	* gcc.c-torture/execute/20040709-2.c: New test.

2004-07-14  Mike Stump  <mrs@apple.com>

	* gcc.dg/wint_t-1.c: Expect to pass on darwin 10.3.x and later.

2004-07-14  Mike Stump  <mrs@apple.com>

	* gcc.dg/wchar_t-1.c: Expect to pass on darwin 10.3.x and later.

2004-07-13  Mark Mitchell  <mark@codesourcery.com>

	PR c++/16518
	* g++.dg/parse/mutable1.C: New test.
	
2004-07-13  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/16443
	* gcc.dg/tree-ssa/20040713-1.c: New test.

2004-07-15  Ulrich Weigand  <uweigand@de.ibm.com>

	* g++.dg/lookup/new2.C: Use first operand of type __SIZE_TYPE__
	for operator new.

2004-07-13  David Billinghurst (David.Billinghurst@riotinto.com)

	* gfortran.dg/g77/README: New file
	* gfortran.dg/g77/19981216-0.f:  Copy from 
	g77.f-torture/noncompile.  Add "dg-do compile" and
	dg-error as required.
	* gfortran.dg/g77/19990218-1.f: Likewise
	* gfortran.dg/g77/19990905-1.f: Likewise
	* gfortran.dg/g77/9263.f: Likewise
	* gfortran.dg/g77/980615-0.f: Likewise
	* gfortran.dg/g77/980616-0.f: Likewise
	* gfortran.dg/g77/check0.f: Likewise
	* gfortran.dg/g77/select_no_compile.f: Likewise

2004-07-13  David Billinghurst (David.Billinghurst@riotinto.com)

	Copy files from g77.f-torture/compile.
	Add "{ dg-do compile}".  Other changes as noted